--- a/monolithic/signup/templates/signup/Home.html
+++ b/monolithic/signup/templates/signup/Home.html
@@ -155,7 +155,7 @@
                   <span class = "card-title grey-text text-darken-4">
                      <i class = "material-icons right">close</i></span><br>
                    <p><h4>Seller:{{ allitems.user_name }}</h4>
-                   <h5>Price: Rs {{ allitems.item_price }}</h5>
+                  <!--  <h5>Price: Rs {{ allitems.item_price }}</h5> -->
                    <h6>Contact:{{ allitems.user_phone }}</h6>
                    <h7>About: {{ allitems.about_item }}</h7><br>
                    Item Tag: {{ allitems.item_tag }}
