--- a/monolithic/signup/templates/signup/upload.html
+++ b/monolithic/signup/templates/signup/upload.html
@@ -35,9 +35,9 @@
     <textarea class="form-control" name="aboutitem" style="width: 500px" id="exampleTextarea" rows="2" maxlength="200" required></textarea>
         </label>
 
-      <label for="exampleInputPrice"><span>Price</span>
+     <!--  <label for="exampleInputPrice"><span>Price</span>
           <input type="number" name="price" style="width:200px;" class="form-control" id="exampleInputPrice" placeholder="Enter price"  required>
-      </label>
+      </label> -->
 
       <label for="tags"><span>Tags</span>
 
