--- a/monolithic/signup/templates/signup/upload.html
+++ b/monolithic/signup/templates/signup/upload.html
@@ -42,9 +42,9 @@
       <label for="tags"><span>Tags</span>
 
           <select id="tags" name="tag">
-            <option name="books" value="Books">Books</option>
-            <option name="cycle" value="Cycle">Cycle</option>
-            <option name="cooler" value="Cooler">Cooler</option>
+            <option name="Male" value="Male">Male</option>
+            <option name="Female" value="Female">Female</option>
+           
           </select>
       </label>
 
