--- a/monolithic/signup/templates/signup/Home.html
+++ b/monolithic/signup/templates/signup/Home.html
@@ -154,11 +154,11 @@
                <div class = "card-reveal" style="background: #5897fb">
                   <span class = "card-title grey-text text-darken-4">
                      <i class = "material-icons right">close</i></span><br>
-                   <p><h4>Seller:{{ allitems.user_name }}</h4>
+                   <p><h4>Person Name:{{ allitems.user_name }}</h4>
                   <!--  <h5>Price: Rs {{ allitems.item_price }}</h5> -->
-                   <h6>Contact:{{ allitems.user_phone }}</h6>
-                   <h7>About: {{ allitems.about_item }}</h7><br>
-                   Item Tag: {{ allitems.item_tag }}
+                   <h6>Contact of person who found:{{ allitems.user_phone }}</h6>
+                   <h7>Description: {{ allitems.about_item }}</h7><br>
+                   Gender: {{ allitems.item_tag }}
                    </p>
                </div>
             </div>
