--- a/monolithic/signup/templates/signup/Register.html
+++ b/monolithic/signup/templates/signup/Register.html
@@ -5,7 +5,7 @@
 <head>
      {% block title %}
      {% endblock %}
-    <title>MNNIT CART</title>
+    <title>KUMBH KHOJ</title>
     {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +40,7 @@
                     <!-- <span class="icon-bar"></span>
                     <span class="icon-bar"></span> -->
                 </button>
-                <a href="MNNIT_KART.html" class="navbar-brand">MNNIT CART</a>
+                <a href="MNNIT_KART.html" class="navbar-brand">KUMBH KHOJ</a>
             </div>
 
 
