--- a/monolithic/signup/templates/signup/navbar.html
+++ b/monolithic/signup/templates/signup/navbar.html
@@ -38,7 +38,7 @@
                     <li ><a href="#">Contact</a></li>
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Items Tag <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Person Type <span class="caret"></span></a>
 
                         <ul class="dropdown-menu">
                             <li ><a href="books/">Books</a></li>
