--- a/monolithic/signup/templates/signup/Home.html
+++ b/monolithic/signup/templates/signup/Home.html
@@ -117,7 +117,7 @@
                               <div class="input-group">
                                <input type="text" style="width: 150px" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
                                 <div class="input-group-btn">
-                                  <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                  <button class="btn btn-default" type="submit" name="Search_by_name"><i class="glyphicon glyphicon-search"></i></button>
                                 </div>
                               </div>
                           </form>
@@ -127,7 +127,7 @@
 
                 <!-- right-margin -->
                 <ul class="nav navbar-nav navbar-right">
-                    <span style="font-weight: bold; font-size: 20px">Welcome {{ username }}&nbsp;</span>
+                    <span style="font-weight: bold; font-size: 18px">Welcome {{ username }}&nbsp;</span>
                     <a href="upload.html" class="btn btn-success" >FOUND&nbsp;</a>
                     <a  href="logout/" class="btn btn-success"  name="logout" color="red">Logout</a>
 
@@ -148,7 +148,7 @@
                </div>
 
                <div class = "card-content activator">
-                  <p>Click the image to reveal more information.</p>
+                  <p>Click the image to reveal more information about Person.</p>
                </div>
 
                <div class = "card-reveal" style="background: #5897fb">
