--- a/monolithic/signup/templates/signup/Home.html
+++ b/monolithic/signup/templates/signup/Home.html
@@ -103,21 +103,20 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Person Type<span class="caret"></a>
 
                         <ul class="dropdown-menu" id="tags">
-                            <li ><a href="books/">Boy</a></li>
-                            <li ><a href="cycle/">Girl</a></li>
-                            <li ><a href="cooler/">Baby</a></li>
-                            <li ><a href="all/">Senior Citizen</a></li>
+                            <li ><a href="Male/">Male</a></li>
+                            <li ><a href="Female/">Female</a></li>
+                            <li ><a href="all/">Everyone</a></li>
                         </ul>
                     </li>
 
-
+              <!-- search bar -->
                     <div class="col-sm-3 col-md-3 pull-right">
                           <form class="navbar-form" role="search">
                               {% csrf_token %}
                               <div class="input-group">
                                <input type="text" style="width: 150px" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
                                 <div class="input-group-btn">
-                                  <button class="btn btn-default" type="submit" name="Search_by_name"><i class="glyphicon glyphicon-search"></i></button>
+                                  <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                                 </div>
                               </div>
                           </form>
@@ -185,7 +184,6 @@
             )
         })
     </script>
-
 
 </body>
 </html>
