--- a/monolithic/signup/templates/signup/navbar.html
+++ b/monolithic/signup/templates/signup/navbar.html
@@ -22,7 +22,7 @@
                     <!-- <span class="icon-bar"></span>
                     <span class="icon-bar"></span> -->
                 </button>
-                <a href="MNNIT_KART.html" class="navbar-brand">MNNIT CART</a>
+                <a href="MNNIT_KART.html" class="navbar-brand">KUMBH KHOJ</a>
             </div>
 
 
@@ -41,10 +41,9 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Person Type <span class="caret"></span></a>
 
                         <ul class="dropdown-menu">
-                            <li ><a href="books/">Books</a></li>
-                            <li ><a href="cycle/">Cycle</a></li>
-                            <li ><a href="cooler/">Cooler</a></li>
-                            <li ><a href="all/">All items</a></li>
+                            <li ><a href="Male/">Male</a></li>
+                            <li ><a href="Female/">Female</a></li>
+                            <li ><a href="all/">Everyone</a></li>
                         </ul>
                     </li>
                 </ul>
